--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "xlsx": "^0.18.5"
-  }
+    "dependencies": {
+        "body-parser": "^1.20.3",
+        "express": "^4.21.2",
+        "puppeteer": "^24.1.0",
+        "qrcode-terminal": "^0.12.0",
+        "whatsapp-web.js": "^1.26.0",
+        "xlsx": "^0.18.5"
+    }
 }
